[package]
name = "mechaway"
version = "0.1.0"
edition = "2021"
description = "Hyperminimalist intelligent systems automation for open-source lovers."
license = "MIT OR Apache-2.0"

[dependencies]
axum = "0.8"
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
mlua = { version = "0.11", features = ["lua54", "serde", "serialize", "vendored"] }
serde_json = "1.0"
jsonpath_lib = "0.3"
petgraph = "0.8"
arc-swap = "1.7"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tokio-cron-scheduler = "0.10"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }